deploy/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brenox-engine
spec:
  template:
    spec:
      containers:
        - name: api
          image: brenox-engine:dev
          imagePullPolicy: IfNotPresent
