deploy/overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: brenox-engine
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
