deploy/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brenox-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: brenox.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brenox-api
                port:
                  name: http
